--- a/composer.json
+++ b/composer.json
@@ -5,21 +5,21 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
-        "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.4.1",
-        "laravel/framework": "^8.75",
-        "laravel/sanctum": "^2.12",
-        "laravel/tinker": "^2.6"
+        "php": "^8.1",
+        "guzzlehttp/guzzle": "^7.7",
+        "laravel/framework": "^10.11",
+        "laravel/sanctum": "^3.2",
+        "laravel/tinker": "^2.8"
     },
     "require-dev": {
-        "dietercoopman/laravel-showsql": "^1.1",
-        "facade/ignition": "^2.17",
-        "fakerphp/faker": "^1.17.0",
-        "laravel/sail": "^1.12.10",
-        "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^5.10",
-        "phpunit/phpunit": "^9.5.10"
+        "dietercoopman/laravel-showsql": "^1.4",
+        "fakerphp/faker": "^1.22.0",
+        "laravel/pint": "^1.10",
+        "laravel/sail": "^1.22",
+        "mockery/mockery": "^1.5.1",
+        "nunomaduro/collision": "^7.5",
+        "phpunit/phpunit": "^10.1",
+        "spatie/laravel-ignition": "^2.1"
     },
     "autoload": {
         "psr-4": {
@@ -56,8 +56,12 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true,
+            "php-http/discovery": true
+        }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
